--- a/src/app/navbar/navbar-template.html
+++ b/src/app/navbar/navbar-template.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="topnav">
     <a [routerLink]="['/landing']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
     <a [routerLink]="['/contact']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contact</a>
     <a [routerLink]="['/about']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">About</a>
