--- a/src/app/navbar/navbar-template.html
+++ b/src/app/navbar/navbar-template.html
@@ -1,5 +1,13 @@
 <div class="topnav">
-    <a [routerLink]="['/landing']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
-    <a [routerLink]="['/contact']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contact</a>
-    <a [routerLink]="['/about']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">About</a>
+    <a style="width: 100%;"[routerLink]="['/landing']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
+    <br>
+    <a style="width: 100%;" [routerLink]="['/contact']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contact</a>
+    <br>
+    <a style="width: 100%;" [routerLink]="['/about']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">About</a>
+    <br>
+    <button class="btns dropbtn" type="button" name="myWorkDrop" (mouseenter)='dropdownO()' ><span>My Work</span></button>
+    <div  id="dropdown" class="dropdown" style="display: none;" (mouseleave)='dropdownC()'>
+        <a style="width: 100%; text-align: center;">Repos</a>
+        <a style="width: 100%; text-align: center;">Links</a>
+    </div>
 </div>
