--- a/src/app/landingPage/landingpage-template.html
+++ b/src/app/landingPage/landingpage-template.html
@@ -1,3 +1,15 @@
-<h1>
-    landing page
-</h1>
+<div>
+    <h1 class="myName" style="margin-top: 5%;">
+        Michael Mariea
+    </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="https://media-exp1.licdn.com/dms/image/C5603AQEzD2NhLyplSg/profile-displayphoto-shrink_200_200/0?e=1593648000&v=beta&t=FjIYrGg2vFDQUY8QiqBCiluhIfYdi8VTA_Daf17b2VM">
+            </div>
+            <div class="col">
+                
+            </div>
+        </div>
+    </div>
+</div>
