--- a/src/app/navbar/navbar-template.html
+++ b/src/app/navbar/navbar-template.html
@@ -8,6 +8,6 @@
     <button class="btns dropbtn" type="button" name="myWorkDrop" (mouseenter)='dropdownO()' ><span>My Work</span></button>
     <div  id="dropdown" class="dropdown" style="display: none;" (mouseleave)='dropdownC()'>
         <a style="width: 100%; text-align: center;" [routerLink]="['/repos']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Repos</a>
-        <a style="width: 100%; text-align: center;">Links</a>
+        <a style="width: 100%; text-align: center;" [routerLink]="['/links']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Links</a>
     </div>
 </div>
