--- a/src/app/navbar/navbar-template.html
+++ b/src/app/navbar/navbar-template.html
@@ -9,5 +9,6 @@
     <div  id="dropdown" class="dropdown" style="display: none;" (mouseleave)='dropdownC()'>
         <a style="width: 100%; text-align: center;" [routerLink]="['/repos']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Repos</a>
         <a style="width: 100%; text-align: center;" [routerLink]="['/links']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Links</a>
+        <a style="width: 100%; text-align: center;" [routerLink]="['/resume']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Resume</a>
     </div>
 </div>
