--- a/src/app/landingPage/landingpage-template.html
+++ b/src/app/landingPage/landingpage-template.html
@@ -4,11 +4,14 @@
     </h1>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <img src="https://media-exp1.licdn.com/dms/image/C5603AQEzD2NhLyplSg/profile-displayphoto-shrink_200_200/0?e=1593648000&v=beta&t=FjIYrGg2vFDQUY8QiqBCiluhIfYdi8VTA_Daf17b2VM">
+            <div class="col" style="margin-left: 5%;">
+                <h2 style="text-align: center; margin-top: 5%;">
+                    Full-Stack Devloper
+                </h2>
+                <p>with experience with Angular, React, Node.js and more.</p>
             </div>
             <div class="col">
-                
+                <img src="../../assets/IMG_2988.JPG" style="opacity: 60%; width: 100%; margin-left: 45%;">
             </div>
         </div>
     </div>
