--- a/src/app/landingPage/landingpage-template.html
+++ b/src/app/landingPage/landingpage-template.html
@@ -2,8 +2,8 @@
     <h1 class="myName" style="margin-top: 5%;">
         Michael Mariea
     </h1>
-    <div class="container">
-        <div class="row">
+    <div class="container bg" >
+        <div class="row" >
             <div class="col" style="margin-left: 5%;">
                 <h2 style="text-align: center; margin-top: 5%;">
                     Full-Stack Devloper
@@ -11,7 +11,7 @@
                 <p>with experience with Angular, React, Node.js and more.</p>
             </div>
             <div class="col">
-                <img src="../../assets/IMG_2988.JPG" style="opacity: 60%; width: 100%; margin-left: 45%;">
+                <!-- <img  alt="picture" src="../../assets/nasa-Q1p7bh3SHj8-unsplash.jpg" style="opacity: 60%; width: 100%; margin-left: 45%;"> -->
             </div>
         </div>
     </div>
