landing page picture and adjustments

--- a/src/app/landingPage/landingpage-template.html
+++ b/src/app/landingPage/landingpage-template.html
@@ -8,7 +8,9 @@
                 <h2 style="text-align: center; margin-top: 5%;">
                     Full-Stack Devloper
                 </h2>
-                <p>with experience with Angular, React, Node.js and more.</p>
+                <p class="description">
+                    with experience with Angular, React, Node.js and more.
+                </p>
             </div>
             <div class="col">
                 <!-- <img  alt="picture" src="../../assets/nasa-Q1p7bh3SHj8-unsplash.jpg" style="opacity: 60%; width: 100%; margin-left: 45%;"> -->
