--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,15 @@ body {
     font-family: 'Open Sans';
 }
 .bg {
-    background-image: url('./assets/nasa-Q1p7bh3SHj8-unsplash.jpg');
-    height: 250px;
+    background-image: linear-gradient(to bottom, rgba(255,255,255,.25) 0%,rgba(255,255,255,0.8) 100%),url("./assets/IMG_0393.jpg.jpeg");
+    height: 500px;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
+
 .topnav {
     overflow: hidden;
     height: 350px;
