--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,11 @@ body {
     background-size: cover;
     
 }
-
+.appPic{
+    float: left;
+    width: 33%;
+    margin-top: 5%;
+}
 .topnav {
     overflow: hidden;
     height: 350px;
@@ -74,4 +78,47 @@ button:focus {outline:0;}
 .btns:hover span:after {
     opacity: 1;
     right: 0;
+}
+.contactBox {
+    background-color: lightslategray;
+    align-content: center;
+    text-align: center;
+    height: 60%;
+}
+.contactBox::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+a.fa.fa-facebook::before{
+    margin-left: -4px;
+}
+a.fa.fa-instagram::before{
+    margin-left: -6px;
+}
+a.fa.fa-linkedin::before {
+    margin-left: -5px;
 }
