moved contact bar and changed it

--- a/src/app/contact/contact-template.html
+++ b/src/app/contact/contact-template.html
@@ -1,17 +1,11 @@
-<h1 style="margin-top: 5%;">
-    Contact
-</h1>
 <div class="contactBox">
     <div class="appPic">
-        <h2 class="appName">Linked-In</h2>
-        <a style="border-radius: 10px; align-content: center;" href="https://www.linkedin.com/in/michael-mariea-44247a184/" target="_blank" class="fa fa-linkedin"></a>
+        <a style="border-top-left-radius: 10px; border-bottom-left-radius: 10px; align-content: center;" href="https://www.linkedin.com/in/michael-mariea-44247a184/" target="_blank" class="fa fa-linkedin"></a>
     </div>
     <div class="appPic">
-        <h2 class="appName">Facebook</h2>
-        <a style="border-radius: 10px; align-content: center;" href="https://www.facebook.com/michael.mariea.1" target="_blank" class="fa fa-facebook"></a>
+        <a style="align-content: center;" href="https://www.facebook.com/michael.mariea.1" target="_blank" class="fa fa-facebook"></a>
     </div>
     <div class="appPic">
-        <h2 class="appName">Instagram</h2>
-        <a style="border-radius: 10px; align-content: center;" href="https://www.instagram.com/michael_mariea/" target="_blank" class="fa fa-instagram"></a>
+        <a style="border-top-right-radius: 10px;border-bottom-right-radius: 10px; align-content: center;" href="https://www.instagram.com/michael_mariea/" target="_blank" class="fa fa-instagram"></a>
     </div>
 </div>
