--- a/src/app/landingPage/landingpage-template.html
+++ b/src/app/landingPage/landingpage-template.html
@@ -11,6 +11,7 @@
                 <p class="description">
                     with experience with Angular, React, Node.js and more.
                 </p>
+                <Contact style="margin-left: 5%;"></Contact>
             </div>
             <div class="col">
                 <!-- <img  alt="picture" src="../../assets/nasa-Q1p7bh3SHj8-unsplash.jpg" style="opacity: 60%; width: 100%; margin-left: 45%;"> -->
