--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Open Sans';
 }
 .bg {
-    background-image: linear-gradient(to bottom, rgba(255,255,255,.25) 0%,rgba(255,255,255,0.8) 100%),url("./assets/IMG_0393.jpg.jpeg");
+    background-image: linear-gradient(to bottom, rgba(255,255,255,.25) 0%,rgba(255,255,255,0.8) 100%),url("./assets/IMG_4424.jpg");
     height: 500px;
     width: 100%;
     background-position: center;
@@ -13,8 +13,6 @@ body {
 }
 .appPic{
     float: left;
-    width: 33%;
-    margin-top: 5%;
 }
 .topnav {
     overflow: hidden;
@@ -80,10 +78,10 @@ button:focus {outline:0;}
     right: 0;
 }
 .contactBox {
-    background-color: lightslategray;
     align-content: center;
     text-align: center;
     height: 60%;
+    margin-left: 20%;
 }
 .contactBox::after{
   content: "";
@@ -96,7 +94,6 @@ button:focus {outline:0;}
     width: 50px;
     text-align: center;
     text-decoration: none;
-    margin: 5px 2px;
 }
 .fa:hover {
     opacity: 0.7;
