--- a/src/app/navbar/navbar-template.html
+++ b/src/app/navbar/navbar-template.html
@@ -1,9 +1,9 @@
 <div class="topnav">
-    <a style="width: 100%;"[routerLink]="['/landing']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
+    <a  class="border-animation" style="width: 100%;"[routerLink]="['/landing']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><div class="border-animation__inner">Home</div></a>
     <br>
-    <a style="width: 100%;" [routerLink]="['/contact']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contact</a>
+    <a  class="border-animation" style="width: 100%;" [routerLink]="['/contact']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><div class="border-animation__inner">Contact</div></a>
     <br>
-    <a style="width: 100%;" [routerLink]="['/about']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">About</a>
+    <a class="border-animation" style="width: 100%;" [routerLink]="['/about']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><div class="border-animation__inner">About</div></a>
     <br>
     <button class="btns dropbtn" type="button" name="myWorkDrop" (mouseenter)='dropdownO()' ><span>My Work</span></button>
     <div id="dropdown" class="dropdown" style="display: none;" (mouseleave)='dropdownC()'>
